--- a/app/views/tweets/_feed.html.erb
+++ b/app/views/tweets/_feed.html.erb
@@ -1,46 +1,56 @@
 <div class="column is-half">
-	<article class="media box">
-		<figure class="media-left">
-			<p class="image is-64x64">
-				<img src="https://pbs.twimg.com/profile_images/1197210754329595905/TqhuvA-c_400x400.jpg">
-			</p>
-		</figure>
-		<div class="media-content">
-      <%= render 'tweets/form' %>
-		</div>
-	</article>
+	<% if user_signed_in? %>
+		<article class="media box">
+			<figure class="media-left">
+				<p class="image is-64x64">
+					<img src="https://pbs.twimg.com/profile_images/1197210754329595905/TqhuvA-c_400x400.jpg">
+				</p>
+			</figure>
+			<div class="media-content">
+				<%= render 'tweets/form' %>
+			</div>
+		</article>
+	<% end %>
 
+	<% @tweets.each do | tweet | %>
+		<div class="box">
+			<article class="media">
+				<div class="media-left">
+					<figure class="image is-64x64">
+						<img src="https://pbs.twimg.com/profile_images/1197210754329595905/TqhuvA-c_400x400.jpg">
+					</figure>
+				</div>
+				<div class="media-content">
+					<div class="content">
+						<strong><%= tweet.user.name %></strong><br/>
+						<small>@<%= tweet.user.username %></small><br/>
+						<p><%= tweet.tweet %></p>
+					</div>
 
+					<% if user_signed_in? && current_user.id == tweet.user_id %>
+						<nav class="level">
+							<div class="level-left is-mobile">
+								<%= link_to tweet, class: "level-item" do %>
+								<span class="icon">
+									<i class="fa fa-link" aria-hidden="true"></i>
+								</span>
+							<% end %>
+							<%= link_to edit_tweet_path(tweet), class: "level-item" do %>
+							<span class="icon">
+								<i class="fa fa-pencil" aria-hidden="true"></i>
+							</span>
+						<% end %>
+						<%= link_to tweet, method: :delete, data: { confirm: "Are you sure you want to delete this tweet?" } do %>
+						<span class="icon">
+							<i class="fa fa-trash-o" aria-hidden="true"></i>
+						</span>
+					<% end %>
+				</div>
+			</nav>
+		<% end %>
 
-<% @tweets.each do | tweet | %>
-  <div class="box">
-  	<article class="media">
-  		<div class="media-left">
-  			<figure class="image is-64x64">
-          <img src="https://pbs.twimg.com/profile_images/1197210754329595905/TqhuvA-c_400x400.jpg">
-  			</figure>
-  		</div>
-  		<div class="media-content">
-  			<div class="content">
-          <strong>Isaac Gonzalez</strong><br />
-          <small>@idgm5</small><br />
-          <p><%= tweet.tweet %></p>
-  				</div>
-          <nav class="level">
-  				<div class="level-left is-mobile">
-  					<%= link_to tweet, class: "level-item" do %>
-  					  <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
-  					<% end %>
-  					<%= link_to edit_tweet_path(tweet), class: "level-item" do %>
-  					  <span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
-  					<% end %>
-  					<%= link_to tweet, method: :delete, data: { confirm: "Are you sure you want to delete this tweet?" } do %>
-  							<span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
-  					<% end %>
-  				</div>
-  			</nav>
-  		</div>
-  	</article>
-  </div>
+	</div>
+</article>
+</div>
 <% end %>
 </div>
