--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,10 +37,10 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="field is-grouped">
-            <p class="control">
-              <%= link_to 'New Tweet', new_tweet_path, class: "button is-info is-inverted" %>
-            </p>
             <% if user_signed_in? %>
+              <p class="control">
+                <%= link_to 'New Tweet', root_path, class: "button is-info is-inverted" %>
+              </p>
               <p class="control">
                 <%= link_to current_user.name, edit_user_registration_path, class: "button is-info" %>
               </p>
