--- a/app/views/tweets/_feed.html.erb
+++ b/app/views/tweets/_feed.html.erb
@@ -3,7 +3,7 @@
 		<article class="media box">
 			<figure class="media-left">
 				<p class="image is-64x64">
-					<img src="https://pbs.twimg.com/profile_images/1197210754329595905/TqhuvA-c_400x400.jpg">
+					<%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
 				</p>
 			</figure>
 			<div class="media-content">
@@ -17,7 +17,7 @@
 			<article class="media">
 				<div class="media-left">
 					<figure class="image is-64x64">
-						<img src="https://pbs.twimg.com/profile_images/1197210754329595905/TqhuvA-c_400x400.jpg">
+						<%= gravatar_image_tag(tweet.user.email, size: 64, alt: tweet.user.name) %>
 					</figure>
 				</div>
 				<div class="media-content">
